[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nest-tutor-eval-env"
version = "0.1.0"
description = "OpenEnv environment for evaluating AI tutor response quality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]
