[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-tutor-eval-env"
version = "1.0.0"
description = "OpenEnv environment for evaluating AI tutor response quality — NEST.ai"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.0",
  "openai==1.30.0",
  "httpx==0.27.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = []
